# http-mini

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI.yml  Publish.yml
src/: lib.rs  main.rs  traits.rs  utils.rs
src/errors/: missing_source_directory.rs  mod.rs
src/traits/: stream_trait.rs
src/utils/: app.rs  fs.rs  http_request.rs  http_response.rs  http_server.rs  mimes.rs
tasks/: CI  test
