[package]
name = "http-mini"
version = "0.1.0"
edition = "2021"
description = "Mini HTTP server"
license = "MIT"
readme = "README.md"
keywords = [
    "http",
    "server",
    "light",
    "mini"
]
authors = ["Iotu Nicolae <nicolae.g.iotu@gmail.com>"]
repository = "https://github.com/NicolaeIotu/http-mini"
homepage = "https://github.com/NicolaeIotu/http-mini"
categories = ["web-programming::http-server"]
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/src/**",
    "/tasks/**",
]
exclude = [
    "/generated/**",
    "/target/**",
]

[dependencies]

[dev-dependencies]
grcov = "0.8.20"

[lib]
name = "mini_http_lib"
path = "src/lib.rs"
test = true
doctest = true
doc = true
crate-type = ["lib"]
