[package]
name = "http-mini"
version = "0.2.0"
edition = "2021"
description = "Mini HTTP server"
license = "MIT"
readme = "README.md"
keywords = [
    "http",
    "server",
    "light",
    "mini"
]
authors = ["Iotu Nicolae <nicolae.g.iotu@gmail.com>"]
homepage = "https://github.com/NicolaeIotu/http-mini"
repository = "https://github.com/NicolaeIotu/http-mini"
documentation = "https://docs.rs/http-mini"
categories = ["web-programming::http-server"]
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/src/**",
    "/tasks/**",
]

[dependencies]

[dev-dependencies]
grcov = "0.8.20"

[[bin]]
name = "http-mini"
path = "src/main.rs"
test = true
doctest = true
doc = true

[lib]
name = "http_mini_lib"
path = "src/lib.rs"
test = true
doctest = true
doc = true
crate-type = ["lib"]
